Wrap image in a div for layout adjustment
Signed-off-by: jacob gawad <iam@jacobg.me>

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>BLACK GOOOSE</title>
 </head>
 <body>
-    <img src="./blackgoose.png" alt="blackgoose">
 
+    <div center>
+    <img src="./blackgoose.png" alt="blackgoose">
+    </div>
 Black Goose Bistro
 
 The Restaurant
@@ -23,4 +25,5 @@ Monday through Thursday 11am to 9pm; Friday and Saturday, 11am to midnight
 
 
 </body>
+
 </html>
